--- a/apps/app/src-tauri/Cargo.toml
+++ b/apps/app/src-tauri/Cargo.toml
@@ -24,6 +24,12 @@ tauri = { version = "2", features = ["devtools"] }
 tauri-plugin-opener = "2"
 sysinfo = "0.30.5"
 candle-core = "0.8.0"
+axum = "0.7"
+tokio = { version = "1", features = ["full"] }
+tower-http = { version = "0.5", features = ["cors"] }
+html2md = "0.2"
+chrono = { version = "0.4", features = ["serde"] }
+
 
 [features]
 # by default Tauri runs in production mode
