--- a/apps/app/src-tauri/Cargo.toml
+++ b/apps/app/src-tauri/Cargo.toml
@@ -29,6 +29,13 @@ tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.5", features = ["cors"] }
 html2md = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
+lancedb = "0.4"
+arrow-array = "50"
+notify = "6.1"
+candle-nn = "0.4"
+candle-transformers = "0.4"
+futures = "0.3"
+
 
 
 [features]
