--- a/apps/app/src-tauri/Cargo.toml
+++ b/apps/app/src-tauri/Cargo.toml
@@ -28,13 +28,19 @@ axum = "0.7"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.5", features = ["cors"] }
 html2md = "0.2"
-chrono = { version = "0.4", features = ["serde"] }
-lancedb = "0.4"
-arrow-array = "50"
+chrono = { version = "=0.4.38", features = ["serde"] }
+# lancedb = "0.10"
+# arrow-array = "53"
 notify = "6.1"
 candle-nn = "0.4"
 candle-transformers = "0.4"
 futures = "0.3"
+ocrs = "0.4"
+rten = "0.4"
+rten-tensor = "0.4"
+image = "0.24"
+anyhow = "1.0"
+
 
 
 
